--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <form action="/message" method="post"> <input type="text" placeholder="enter text" name="someText"> <button type="submit">Send</button> </form>
+
+    <ul> <li>Nodejs User 1</li> <li>Nodejs User 2</li><li>Nodejs User 3</li><li>Nodejs User 4</li> </ul>
 </body>
 </html>
